Fix gui layout issues (#21)
* Add color variables

* Style ingredient selection area

* Fix spacing

--- a/src/styles/components/_GameContainer.scss
+++ b/src/styles/components/_GameContainer.scss
@@ -1,5 +1,6 @@
 .GameContainer {
   .main {
+    border: 2px ridge $color-tan;
     background-color: rgba(247, 251, 255, 0.626);
     display: flex;
     flex-direction: column;
