--- a/src/styles/components/_Workbench.scss
+++ b/src/styles/components/_Workbench.scss
@@ -1,4 +1,21 @@
 .WorkbenchContainer {
   min-width: 100%;
+  height: 100%;
   overflow: hidden;
+
+  .WorkbenchContainer--Top {
+    height: 50%;
+    border: 1px solid $color-black;
+
+    .WorkbenchNav {
+      margin: 0.5em;
+      text-align: center;
+    }
+  }
+
+  .WorkbenchContainer--Bottom {
+    text-align: center;
+    height: 50%;
+    border: 1px solid $color-black;
+  }
 }
